add game component

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: monospace;
+  font-size: 16px;
+}
+
+body, button {  font-weight: 900; }
+
+.App {
+  height: 100vh;
+}
+
+header {
+  display: flex;
+  text-align: center;
+  padding: 3em 0;
+  border-bottom: 2px solid black;
+  margin-bottom: 2em;
+}
+
+.header-text {
+  align-self: center;
+  padding: 0 .2em;
+}
+
+button {
+  padding: 1.5em;
+  border-radius: 20px;
+  outline: none;
+}
+
+.light-theme {
+  background-color: whitesmoke;
+  color: #333333;
+}
+
+.dark-theme {
+  background-color: #333333;
+  color: whitesmoke;
+}
+
+.game-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+textarea {
+  border: 3px solid black;
+  width: 90%;
+  margin: 0 auto;
+  outline: none;
+  height: 200px;
+  padding: 10px;
+  resize: none;
 }
